Talked about redirection (clientside and serverside)

--- a/7.ExpressWideWebServer/public/details.html
+++ b/7.ExpressWideWebServer/public/details.html
@@ -7,9 +7,12 @@
 </head>
 <body>
     <h1>Details page</h1><br>
-    <li>× Apple</li>
-    <li>× Banana</li>
-    <li>× Orange</li>
-    <li>× Kiwi</li>
+    <li>Apple</li>
+    <li>Banana</li>
+    <li>Orange</li>
+    <li>Kiwi</li>
+    <p>To go back to the main page, press the 
+        <a href="/" style="font-size: large;">BUTTON</a>
+    </p>
 </body>
 </html>
