--- a/7.ExpressWideWebServer/public/welcome.html
+++ b/7.ExpressWideWebServer/public/welcome.html
@@ -9,6 +9,16 @@
     <h1>Welcome to my website!</h1>
     <h2>How do you feel?</h2><br>
     <p>To go to the details page, write "/details" in the URL...</p>
-    <p>or you can click on this <a href="/details" style="font-size: large;">LINK</a></p>
+    <p>or you can click on this 
+        <a href="/details" style="font-size: large;">LINK</a>
+    </p>
+
+    <script>
+        setTimeout(() => {
+            //CLIENT-SIDE REDIRECTION
+            window.location.href = "/details";
+        }, 5000);
+    </script>
+
 </body>
 </html>
